--- a/students.html
+++ b/students.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Subjects</title>
+<title>Students</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -10,7 +10,9 @@
 <script src="evaluation_log.js"></script>
 </head>
 <body>
-	<div class="head"><img alt="" src="logot.png"></div>
+	<div class="head">
+		<img alt="" src="logot.png">
+	</div>
 
 
 	<div class="container-fluid">
@@ -20,25 +22,31 @@
 
 				<div class="buttons">
 					<button class="btn btn-primary" type="button" data-toggle="modal"
-						data-target="#myModalAdd">Add subject</button>
+						data-target="#myModalAdd">Add student</button>
 					<div id="myModalAdd" class="modal fade">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h3 class="modal-title">Add subject</h3>
+									<h3 class="modal-title">Add student</h3>
 								</div>
 								<div class="modal-body">
-									<form id="addSubject">
+									<form id="addStudent">
 										<div class="form-group">
-											<label for="inputSubject">Name Subject</label> <input
-												id="inputSubject" placeholder="Input name subject"
+											<label for="inputFirstName">first name</label> <input
+												id="inputSubject" placeholder="Input first name"
+												class="form-control" type="text" pattern="^[a-zA-Z-]+$">
+										</div>
+
+										<div class="form-group">
+											<label for="inputFirstName">last name</label> <input
+												id="inputFirstName" placeholder="Input last name"
 												class="form-control" type="text" pattern="^[a-zA-Z-]+$">
 										</div>
 									</form>
 								</div>
 								<div class="modal-footer">
 									<button class="btn btn-default" type="button"
-										data-dismiss="modal" form="addSubject" formaction="######"
+										data-dismiss="modal" form="addStudent" formaction="######"
 										formmethod="post">Add</button>
 									<button class="btn btn-default" type="button"
 										data-dismiss="modal">Close</button>
@@ -49,23 +57,29 @@
 
 
 					<button data-toggle="modal" data-target="#myModalUpDate"
-						type="button" class="btn btn-primary">Update subject</button>
+						type="button" class="btn btn-primary">Update student</button>
 					<div id="myModalUpDate" class="modal fade">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h3 class="modal-title">Update subject</h3>
+									<h3 class="modal-title">Update student</h3>
 								</div>
 								<div class="modal-body">
 									<form id="Update">
 										<div class="form-group">
-											<label for="inputSubject">Name Subject</label> <input
-												id="inputSubject" placeholder="Input name subject"
-												class="form-control" type="text" pattern="^[a-zA-Z-]+$">
-										</div>
-										<div class="form-group">
 											<label for="inputId">ID</label> <input id="inputId"
 												placeholder="Input Id" class="form-control" type="number">
+										</div>
+										<div class="form-group">
+											<label for="inputFirstName">first name</label> <input
+												id="inputSubject" placeholder="Input first name"
+												class="form-control" type="text" pattern="^[a-zA-Z-]+$">
+										</div>
+
+										<div class="form-group">
+											<label for="inputFirstName">last name</label> <input
+												id="inputFirstName" placeholder="Input last name"
+												class="form-control" type="text" pattern="^[a-zA-Z-]+$">
 										</div>
 									</form>
 								</div>
@@ -83,12 +97,12 @@
 
 
 					<button data-toggle="modal" data-target="#myModalDelete"
-						type="button" class="btn btn-danger">Delete subject</button>
+						type="button" class="btn btn-danger">Delete student</button>
 					<div id="myModalDelete" class="modal fade">
 						<div class="modal-dialog">
 							<div class="modal-content">
 								<div class="modal-header">
-									<h3 class="modal-title">Delete subject</h3>
+									<h3 class="modal-title">Delete student</h3>
 								</div>
 								<div class="modal-body">
 									<form id="deleteSubject">
@@ -114,39 +128,46 @@
 				<hr>
 				<table class="table table-bordered table-hover table-striped">
 					<caption>
-						<i class="glyphicon glyphicon-book"></i> subjects
+						<i class="glyphicon glyphicon-user"></i> students
 						<hr>
 					</caption>
 
 					<thead>
 						<tr>
 							<th class="text-center">id</th>
-							<th class="text-center">subject name</th>
+							<th class="text-center">first name</th>
+							<th class="text-center">last name</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
 							<td class="text-center">1</td>
-							<td class="text-center">history</td>
+							<td class="text-center">Victor</td>
+							<td class="text-center">Simpson</td>
 						</tr>
 						<tr>
 							<td class="text-center">2</td>
-							<td class="text-center">fjjdnfkj djfn</td>
+							<td class="text-center">Oleg</td>
+							<td class="text-center">Petrov</td>
 						</tr>
 						<tr>
 							<td class="text-center">2</td>
-							<td class="text-center">history</td>
+							<td class="text-center">Victor</td>
+							<td class="text-center">Simpson</td>
 						</tr>
 						<tr>
 							<td class="text-center">3</td>
+							<td class="text-center">fjjdnfkj djfn</td>
 							<td class="text-center">fjjdnfkj djfn</td>
 						</tr>
 						<tr>
 							<td class="text-center">4</td>
 							<td class="text-center">history</td>
+							<td class="text-center">fjjdnfkj djfn</td>
 						</tr>
 						<tr>
 							<td class="text-center">5</td>
+							<td class="text-center">fjjdnfkj djfn</td>
 							<td class="text-center">fjjdnfkj djfn</td>
 						</tr>
 					</tbody>
@@ -156,14 +177,15 @@
 
 			<div class="col-xs-3 col-xs-offset-1">
 				<div>
-					<h3><img alt="" src="logMarker.png"> Navigation</h3>
-					<a class="link" href="students.html"><i
+					<h3>
+						<img alt="" src="logMarker.png"> Navigation
+					</h3>
+					<a class="link visited" href="students.html"><i
 						class="glyphicon glyphicon-user"></i> students</a> <a
-						href="evaluation_log.html" class="visited"><i
-						class="glyphicon glyphicon-book"></i> subjects</a> <a
-						href="scores.html"><i class="glyphicon glyphicon-piggy-bank"></i>
-						marks</a> <a href=""><i class="glyphicon glyphicon-education"></i>
-						progress</a>
+						href="evaluation_log.html"><i class="glyphicon glyphicon-book"></i>
+						subjects</a> <a href="scores.html"><i
+						class="glyphicon glyphicon-piggy-bank"></i> marks</a> <a href=""><i
+						class="glyphicon glyphicon-education"></i> progress</a>
 				</div>
 			</div>
 		</div>
