--- a/evaluation_log.html
+++ b/evaluation_log.html
@@ -2,20 +2,22 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Subjects</title>
+<title>Register|Subjects</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="css/bootstrap-theme.min.css">
 <link href="style.css" rel="stylesheet">
 <script src="evaluation_log.js"></script>
 </head>
 <body>
-	<div class="head"><img alt="" src="logot.png"></div>
-
+	<div class="head">
+		<img alt="" src="logot.png">
+	</div>
 
 	<div class="container-fluid">
 
-		<div class="row">
+		<div class="row-fluid">
 			<div class="size col-xs-7 col-xs-offset-1">
 
 				<div class="buttons">
@@ -154,9 +156,44 @@
 			</div>
 
 
-			<div class="col-xs-3 col-xs-offset-1">
-				<div>
-					<h3><img alt="" src="logMarker.png"> Navigation</h3>
+			<div class="col-xs-3 col-xs-offset-1  col-md-3 hidden-xs hidden-sm">
+				<div class="search">
+					<h3>
+						<img alt="" src="logMarker.png"> Search
+					</h3>
+					<form class="form-horizontal">
+						<fieldset>
+							<p>
+								<label for="selectRegister" class="control-label">select
+									register</label> <select id="selectRegister" class="form-control">
+									<option>...</option>
+									<option>students</option>
+									<option>subjects</option>
+									<option>marks</option>
+									<option>progress</option>
+								</select>
+							</p>
+							<p>
+								<label for="inputId" class="control-label">id</label> <input
+									id="inputId" placeholder="Input Id" class="form-control"
+									type="number">
+							</p>
+							<p>
+								<label for="inputName">Name</label> <input id="inputName"
+									placeholder="Input name" class="form-control" type="text"
+									pattern="^[a-zA-Z-]+$">
+							</p>
+
+							<div class="col-sm-10 col-sm-offset-2">
+								<button type="submit" class="btn btn-default">search</button>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<div class="navigator">
+					<h3>
+						<img alt="" src="logMarker.png"> Navigation
+					</h3>
 					<a class="link" href="students.html"><i
 						class="glyphicon glyphicon-user"></i> students</a> <a
 						href="evaluation_log.html" class="visited"><i
@@ -165,12 +202,9 @@
 						marks</a> <a href=""><i class="glyphicon glyphicon-education"></i>
 						progress</a>
 				</div>
+
 			</div>
 		</div>
-
-
-
-
 
 
 	</div>
