--- a/students.html
+++ b/students.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Students</title>
+<title>Register|Students</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="shortcut icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.css" rel="stylesheet">
@@ -17,7 +17,7 @@
 
 	<div class="container-fluid">
 
-		<div class="row">
+		<div class="row-fluid">
 			<div class="size col-xs-7 col-xs-offset-1">
 
 				<div class="buttons">
@@ -126,7 +126,7 @@
 				</div>
 
 				<hr>
-				<table class="table table-bordered table-hover table-striped">
+				<table class="table table-condensed table-bordered table-hover table-striped">
 					<caption>
 						<i class="glyphicon glyphicon-user"></i> students
 						<hr>
@@ -170,13 +170,85 @@
 							<td class="text-center">fjjdnfkj djfn</td>
 							<td class="text-center">fjjdnfkj djfn</td>
 						</tr>
+						<tr>
+							<td class="text-center">1</td>
+							<td class="text-center">Victor</td>
+							<td class="text-center">Simpson</td>
+						</tr>
+						<tr>
+							<td class="text-center">2</td>
+							<td class="text-center">Oleg</td>
+							<td class="text-center">Petrov</td>
+						</tr>
+						<tr>
+							<td class="text-center">2</td>
+							<td class="text-center">Victor</td>
+							<td class="text-center">Simpson</td>
+						</tr>
+						<tr>
+							<td class="text-center">3</td>
+							<td class="text-center">fjjdnfkj djfn</td>
+							<td class="text-center">fjjdnfkj djfn</td>
+						</tr><tr>
+							<td class="text-center">1</td>
+							<td class="text-center">Victor</td>
+							<td class="text-center">Simpson</td>
+						</tr>
+						<tr>
+							<td class="text-center">2</td>
+							<td class="text-center">Oleg</td>
+							<td class="text-center">Petrov</td>
+						</tr>
+						<tr>
+							<td class="text-center">2</td>
+							<td class="text-center">Victor</td>
+							<td class="text-center">Simpson</td>
+						</tr>
+						<tr>
+							<td class="text-center">3</td>
+							<td class="text-center">fjjdnfkj djfn</td>
+							<td class="text-center">fjjdnfkj djfn</td>
+						</tr>
 					</tbody>
 				</table>
 			</div>
 
 
-			<div class="col-xs-3 col-xs-offset-1">
-				<div>
+			<div class="col-xs-3 col-xs-offset-1 col-md-3 hidden-xs hidden-sm">
+				<div class="search">
+					<h3>
+						<img alt="" src="logMarker.png"> Search
+					</h3>
+					<form class="form-horizontal">
+						<fieldset>
+							<p>
+								<label for="selectRegister" class="control-label">select
+									register</label> <select id="selectRegister" class="form-control">
+									<option>...</option>
+									<option>students</option>
+									<option>subjects</option>
+									<option>marks</option>
+									<option>progress</option>
+								</select>
+							</p>
+							<p>
+								<label for="inputId" class="control-label">id</label> <input
+									id="inputId" placeholder="Input Id" class="form-control"
+									type="number">
+							</p>
+							<p>
+								<label for="inputName">Name</label> <input id="inputName"
+									placeholder="Input name" class="form-control" type="text"
+									pattern="^[a-zA-Z-]+$">
+							</p>
+
+							<div class="col-sm-10 col-sm-offset-2">
+								<button type="submit" class="btn btn-default">search</button>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+				<div class="navigator">
 					<h3>
 						<img alt="" src="logMarker.png"> Navigation
 					</h3>
