--- a/evaluation_log.html
+++ b/evaluation_log.html
@@ -30,18 +30,17 @@
 									<h3 class="modal-title">Add subject</h3>
 								</div>
 								<div class="modal-body">
-									<form id="addSubject">
+									<form id="addSubject" action="/university/subjects/add"  method="post">
 										<div class="form-group">
-											<label for="inputSubject">Name Subject</label> <input
+											<label for="inputSubject">Name Subject</label> 
+											<input
 												id="inputSubject" placeholder="Input name subject"
 												class="form-control" type="text" pattern="^[a-zA-Z-]+$">
+												<input class="inputButton btn btn-default" type="submit" value="Add">
 										</div>
 									</form>
 								</div>
 								<div class="modal-footer">
-									<button class="btn btn-default" type="button"
-										data-dismiss="modal" form="addSubject" formaction="######"
-										formmethod="post">Add</button>
 									<button class="btn btn-default" type="button"
 										data-dismiss="modal">Close</button>
 								</div>
@@ -59,7 +58,7 @@
 									<h3 class="modal-title">Update subject</h3>
 								</div>
 								<div class="modal-body">
-									<form id="Update">
+									<form id="Update" action="/university/subjects/add" method="post">
 										<div class="form-group">
 											<label for="inputSubject">Name Subject</label> <input
 												id="inputSubject" placeholder="Input name subject"
@@ -68,13 +67,11 @@
 										<div class="form-group">
 											<label for="inputId">ID</label> <input id="inputId"
 												placeholder="Input Id" class="form-control" type="number">
+												<input class="inputButton btn btn-default" type="submit" value="Update">
 										</div>
 									</form>
 								</div>
 								<div class="modal-footer">
-									<button class="btn btn-default" type="button"
-										data-dismiss="modal" form="Update" formaction="######"
-										formmethod="post">Update</button>
 									<button class="btn btn-default" type="button"
 										data-dismiss="modal">Close</button>
 								</div>
@@ -93,17 +90,16 @@
 									<h3 class="modal-title">Delete subject</h3>
 								</div>
 								<div class="modal-body">
-									<form id="deleteSubject">
+									<form id="deleteSubject" action="/university/subjects/delete" method="post">
 										<div class="form-group">
-											<label for="inputId">ID</label> <input id="inputId"
+											<label for="inputId">ID</label> 
+											<input id="inputId"
 												placeholder="Input Id" class="form-control" type="number">
+											<input class="inputButton btn btn-default" type="submit" value="Delete">
 										</div>
 									</form>
 								</div>
 								<div class="modal-footer">
-									<button class="btn btn-default" type="button"
-										data-dismiss="modal" form="deleteSubject" formaction="######"
-										formmethod="post">Delete</button>
 									<button class="btn btn-default" type="button"
 										data-dismiss="modal">Close</button>
 								</div>
@@ -161,7 +157,7 @@
 					<h3>
 						<img alt="" src="logMarker.png"> Search
 					</h3>
-					<form class="form-horizontal">
+					<form class="form-horizontal" action="####" method="post">
 						<fieldset>
 							<p>
 								<label for="selectRegister" class="control-label">select
@@ -184,8 +180,8 @@
 									pattern="^[a-zA-Z-]+$">
 							</p>
 
-							<div class="col-sm-10 col-sm-offset-2">
-								<button type="submit" class="btn btn-default">search</button>
+							<div class="col-sm-12 col-sm-offset-4">
+								<input class="inputButton btn btn-default" type="submit" value="Search">
 							</div>
 						</fieldset>
 					</form>
