--- a/scores.html
+++ b/scores.html
@@ -159,7 +159,7 @@
 					<h3>
 						<img alt="" src="logMarker.png"> Search
 					</h3>
-					<form class="form-horizontal">
+					<form class="form-horizontal" action="####" method="post">
 						<fieldset>
 							<p>
 								<label for="selectRegister" class="control-label">select
@@ -182,8 +182,8 @@
 									pattern="^[a-zA-Z-]+$">
 							</p>
 
-							<div class="col-sm-10 col-sm-offset-2">
-								<button type="submit" class="btn btn-default">search</button>
+							<div class="col-sm-12 col-sm-offset-4">
+								<input class="inputButton btn btn-default" type="submit" value="Search">
 							</div>
 						</fieldset>
 					</form>
